# cheap

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: build.yaml
migrations/: Cargo.toml
migrations/src/: lib.rs  m20220101_000001_init.rs  m20241227_184847_add_auth.rs  m20241228_230547_relation_in_session.rs  m20241228_232247_email_not_null.rs  main.rs
src/: config.rs  errors.rs  main.rs  types.rs
src/controllers/: auth.rs
src/database/: connection.rs
src/database/entity/: mod.rs  sessions.rs  users.rs
src/routes/: auth.rs
src/services/: mod.rs
src/services/auth/: dto.rs  mutation.rs
src/services/jwt/: mutation.rs
src/services/session/: mutation.rs
src/services/user/: dto.rs  mod.rs  mutation.rs
