[package]
edition = "2021"
name = "invee"
version = "0.1.0"

[workspace]
members = [".", "migrations"]

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
config = "0.15.4"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
sea-orm = {version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid", "macros"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
time = "0.3.37"
tracing = {version = "0.1.41", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.19"
utoipa = {version = "5.3.0", features = ["actix_extras", "uuid"]}
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = {version = "8.1.0", features = ["actix-web"]}
uuid = {version = "1.11.0", features = ["v4"]}
